tests/negative/regression/r39.orng
// r39.orng:6:33: error: expected a value of type `()`, got a value of type `Int`
//     const a: Int = match { } { 4 => 5 }
//                                ^
// 
fn main() -> Int { 
    const a: Int = match { } { 4 => 5 }
    a
} 
